Stepper motor designed as intended.

--- a/Lab8Servo.X/nbproject/Makefile-genesis.properties
+++ b/Lab8Servo.X/nbproject/Makefile-genesis.properties
@@ -1,11 +1,11 @@
 #
-#Thu Oct 16 11:48:53 MDT 2025
+#Sun Oct 19 19:35:00 MDT 2025
 default.languagetoolchain.version=3.10
 default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.20\\packs\\Microchip\\PIC16Fxxx_DFP\\1.6.156
 default.com-microchip-mplab-nbide-toolchain-picasm-PICASMLanguageToolchain.md5=9ec152e4e6613316b62acb929bcaf32b
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v3.10\\pic-as\\bin
-host.id=dkhd-kels-s
+host.id=2dub-nv3d-b9
 configurations-xml=166a8f099a338939e3a9b5091587a07a
 default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=5b9902b017a30efdeb77dee75a1e4e51
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
